added images, install font

--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Graffiti</title>
+  <link rel="shortcut icon" type="image/png" href="img/icon/heart-upside-down.png"/>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
+  <header class='header'>
+    <div class="block-wrapper">
+      <div class="header__top">
+        <div class="header__city">Санкт-петербург</div>
+        <div class="header__top-righ">
+          <a class="email">zakaz@печатьнахолсте.рф </a>
+          <div class="header__social social">
+            <a href="#" class="social__item"></a>
+            <a href="#" class="social__item"></a>
+            <a href="#" class="social__item"></a>
+            <a href="#" class="social__item"></a>
+          </div>
+        </div>
+      </div>
+      <div class="header__bottom">
+        <div class="logo">
+          <img class="logo__img" src="img/logo.png" alt="logo">
+        </div>      
+        <nav class="header__menu menu">
+          <a href="#" class="menu__item">главная</a>
+          <a href="#" class="menu__item">доставка</a>
+          <a href="#" class="menu__item">контакты</a>
+        </nav>
+        <button class="order">заказать</button>
+        <div class="phones">
+          <img src="" alt="">
+          <div class="phones__call">
+            <span class="phones__row">Звони сейчач!</span>
+            <span class="phones__number">Звони сейчач!</span>
+          </div>
+        </div>
+        <div class="header__bascket bascket">
+          <img src="" alt="" class="bascket__img">
+        </div>
+      </div>
+    </div>
+  </header>
   
 </body>
 </html>
