--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
         <div class="header__top-righ">
           <a class="email">zakaz@печатьнахолсте.рф </a>
           <div class="header__social social">
-            <a href="#" class="social__item"></a>
-            <a href="#" class="social__item"></a>
-            <a href="#" class="social__item"></a>
-            <a href="#" class="social__item"></a>
+            <a href="#" class="social__item social__item--vk"></a>
+            <a href="#" class="social__item social__item--fb"></a>
+            <a href="#" class="social__item social__item--od"></a>
+            <a href="#" class="social__item social__item--inst"></a>
           </div>
         </div>
       </div>
       <div class="header__bottom">
         <div class="logo">
-          <img class="logo__img" src="img/logo.png" alt="logo">
+          <img class="logo__img" src="img/icon/logo.png" alt="Grafiti logo">
         </div>      
         <nav class="header__menu menu">
           <a href="#" class="menu__item">главная</a>
           <a href="#" class="menu__item">доставка</a>
           <a href="#" class="menu__item">контакты</a>
         </nav>
-        <button class="order">заказать</button>
-        <div class="phones">
-          <img src="" alt="">
+        <button class="header__button button">заказать</button>
+        <div class="header__phones phones">
+          <img src="img/icon/phone.svg" alt="call to Grafiti">
           <div class="phones__call">
             <span class="phones__row">Звони сейчач!</span>
             <span class="phones__number">Звони сейчач!</span>
           </div>
         </div>
         <div class="header__bascket bascket">
-          <img src="" alt="" class="bascket__img">
+          <img src="img/icon/bascket.png" alt="Grafiti product bascket" class="bascket__img">
         </div>
       </div>
     </div>
