created adaptive for header

--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
       <div class="header__top">
         <div class="header__city">Санкт-петербург</div>
         <div class="header__top-righ">
-          <a class="email">zakaz@печатьнахолсте.рф </a>
+          <a class="email">zakaz@печатьнахолсте.рф</a>
           <div class="header__social social">
-            <a href="#" class="social__item social__item--vk"></a>
-            <a href="#" class="social__item social__item--fb"></a>
-            <a href="#" class="social__item social__item--od"></a>
-            <a href="#" class="social__item social__item--inst"></a>
+            <a href="#" class="social__link">
+              <img src="img/icon/vk.svg" alt="Мы в Facebook" class="social__item ">
+            </a>
+            <a href="#" class="social__link">
+              <img src="img/icon/faceboook.svg" alt="Мы в Facebook" class="social__item">
+            </a>
+            <a href="#" class="social__link">
+              <img src="img/icon/odnoklasniki.svg" alt="Мы в Facebook" class="social__item">
+            </a>
+            <a href="#" class="social__link">
+              <img src="img/icon/instagram.svg" alt="Мы в Facebook" class="social__item">
+            </a>
           </div>
         </div>
       </div>
@@ -29,7 +37,9 @@
           <img class="logo__img" src="img/icon/logo.png" alt="Grafiti logo">
         </div>      
         <nav class="header__menu menu">
-          <a href="#" class="menu__item">главная</a>
+          <a href="#" class="menu__item">главная
+            <div class="menu__item-subline"></div>
+          </a>
           <a href="#" class="menu__item">доставка</a>
           <a href="#" class="menu__item">контакты</a>
         </nav>
