--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
         </div>
       </div>
       <div class="header__bottom">
-        <div class="logo">
-          <img class="logo__img" src="img/icon/logo.png" alt="Grafiti logo">
-        </div>      
+        <img class="header__logo logo" src="img/icon/logo.png" alt="Grafiti logo">     
         <nav class="header__menu menu">
           <a href="#" class="menu__item">главная
             <div class="menu__item-subline"></div>
@@ -45,10 +43,10 @@
         </nav>
         <button class="header__button button">заказать</button>
         <div class="header__phones phones">
-          <img src="img/icon/phone.svg" alt="call to Grafiti">
+          <img class="phones__image" src="img/icon/phone.svg" alt="call to Grafiti">
           <div class="phones__call">
             <span class="phones__row">Звони сейчач!</span>
-            <span class="phones__number">Звони сейчач!</span>
+            <span class="phones__number">8 800 70 75 31</span>
           </div>
         </div>
         <div class="header__bascket bascket">
