--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="img/icon/heart-upside-down.png"/>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/section-order.css">
 </head>
 <body>
   <header class='header'>
@@ -55,6 +56,64 @@
       </div>
     </div>
   </header>
-  
+  <main class="main">
+    <section class="section-order">
+      <div class="block-wrapper">
+        <div class="main__card-order card-order">
+          <h1 class="card-order__title">Печать на холсте</h1>
+          <h2 class="card-order__subtitle">с вашим изображением</h2>
+          <div class="card-order__patterns patterns">  <img src="img/icon/chek.png" alt="" class="card-order__chek">
+            <div class="patterns__items put">
+              <div class="patterns__item patterns__item-rectangle"></div>
+              <p class="patterns__text">Прямоуг.</p>
+            </div>
+            <div class="patterns__items put">
+              <div class="patterns__item patterns__item-square"></div>
+              <p class="patterns__text">Квадрат</p>
+            </div>
+              <div class="patterns__items put">
+              <div class="patterns__item patterns__item-panorama"></div>
+              <p class="patterns__text">Панорама</p>
+            </div>
+          </div>
+          <div class="card-order__put put put-size">
+            <span class="put__title">Размер:</span>
+            <p class="put__subtitle">80x120</p>
+            <div class="put-size__arrow"></div>
+            <ul class="put-size__list-size list-size">
+              <li class="list-size__item">80x120</li>
+              <li class="list-size__item">150x122</li>
+              <li class="list-size__item">80x120</li>
+              <li class="list-size__item">150x122</li>              
+            </ul>
+            <div class="list-size__arrow"></div>
+          </div>
+          <div class="card-order__put put put-image">
+            <img src="img/icon/pic.png" class="put-imag__pictur">
+            <div class="put-image__wrapper">
+              <span class="put__title put__title-size">Перетащите сюда изображение</span>
+              <span class="put__subtitle">Или нажмите и<br>выберете файл</span>
+            </div>
+            <div class="put-image__points">
+                <div class="point"></div>
+                <div class="point"></div>
+                <div class="point"></div>
+            </div>          
+          </div>
+          <div class="card-order__put  put-place-order">
+            <div class="put-place-order__price">
+              <span class="price__value">1000P</span>
+              <img src="img/icon/bascket2.png" alt="Get order to Graffiti" class="price__bascket">
+            </div>
+            <button class="put-place-order__button button">Заказать</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+
+
+    
+  </main>
 </body>
 </html>
