finished adaptive section-order

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </header>
   <main class="main">
     <section class="section-order">
-      <div class="block-wrapper">
+      <div class="section-order__block-wrapper block-wrapper">
         <div class="main__card-order card-order">
           <h1 class="card-order__title">Печать на холсте</h1>
           <h2 class="card-order__subtitle">с вашим изображением</h2>
@@ -108,6 +108,7 @@
             <button class="put-place-order__button button">Заказать</button>
           </div>
         </div>
+        <div class="section-order__canvas"></div>
       </div>
     </section>
     
