--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/section-order.css">
+  <link rel="stylesheet" href="css/section-ofer.css">
 </head>
 <body>
   <header class='header'>
@@ -110,6 +111,32 @@
         </div>
         <div class="section-order__canvas"></div>
       </div>
+    </section>
+
+    <section class="section-ofer">
+      <div class="section-ofer__block-wrapper block-wrapper">
+        <div class="section-ofer__ofer ofer">
+          <div class="ofer__block">
+            <span class="ofer__title">Картонный задник</span>
+            <p class="ofer__text">Прародителем текста-рыбы является известный "Lorem Ipsum" – латинский текст, ноги которого растут аж из 45 года до нашей эры.</p>
+          </div>
+          <div class="ofer__block">
+            <span class="ofer__title">Воспользуйтесь доставкой</span>
+            <p class="ofer__text">Прародителем текста-рыбы является известный "Lorem Ipsum" – латинский текст, ноги которого растут аж из 45 года до нашей эры.</p>
+          </div>
+          <div class="ofer__block">
+            <span class="ofer__title">Холст покрывается лаком</span>
+            <p class="ofer__text">Прародителем текста-рыбы является известный "Lorem Ipsum" – латинский текст, ноги которого растут аж из 45 года до нашей эры.</p>
+          </div>
+          <div class="ofer__block">
+            <span class="ofer__title">ЭКО материалы</span>
+            <p class="ofer__text">Прародителем текста-рыбы является известный "Lorem Ipsum" – латинский текст, ноги которого растут аж из 45 года до нашей эры.</p>
+          </div>
+        </div>
+      </div>
+
+      
+      <span class="section-ofer__text"></span>
     </section>
     
 
