--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <header class='header'>
     <div class="block-wrapper">
       <div class="header__top">
-        <div class="header__city">Санкт-петербург</div>
+        <div class="header__city">Санкт-петербург<div class="city__arrow arrow"></div></div>
+        
         <div class="header__top-righ">
           <a class="email">zakaz@печатьнахолсте.рф</a>
           <div class="header__social social">
@@ -80,14 +81,14 @@
           <div class="card-order__put put put-size">
             <span class="put__title">Размер:</span>
             <p class="put__subtitle">80x120</p>
-            <div class="put-size__arrow"></div>
+            <div class="put-size__arrow "></div>
             <ul class="put-size__list-size list-size">
               <li class="list-size__item">80x120</li>
               <li class="list-size__item">150x122</li>
               <li class="list-size__item">80x120</li>
               <li class="list-size__item">150x122</li>              
             </ul>
-            <div class="list-size__arrow"></div>
+            <div class="list-size__arrow arrow"></div>
           </div>
           <div class="card-order__put put put-image">
             <img src="img/icon/pic.png" class="put-imag__pictur">
