created block caarousel

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/section-order.css">
   <link rel="stylesheet" href="css/section-ofer.css">
+  <link rel="stylesheet" href="css/carousel.css">
 </head>
 <body>
   <header class='header'>
@@ -113,7 +114,6 @@
         <div class="section-order__canvas"></div>
       </div>
     </section>
-
     <section class="section-ofer">
       <div class="section-ofer__block-wrapper block-wrapper">
         <div class="section-ofer__ofer ofer">
@@ -134,11 +134,55 @@
             <p class="ofer__text">Прародителем текста-рыбы является известный "Lorem Ipsum" – латинский текст, ноги которого растут аж из 45 года до нашей эры.</p>
           </div>
         </div>
-      </div>
-
-      
+      </div>      
       <span class="section-ofer__text"></span>
     </section>
+
+
+    <div class="carousel">
+        <button class="carousel__button button-prev"></button>
+        <div class="carousel__gallery">
+          <ul class="carousel__images">
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic1.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic2.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic3.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic4.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic5.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic6.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic1.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic2.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic3.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic4.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic5.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item" src="img/pic6.jpg">
+            </li>
+          </ul>
+        </div>
+        <button class="carousel__button button-next"></button>
+      </div>
     
 
 
