finished caorusel.js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <div class="block-wrapper">
       <div class="header__top">
         <div class="header__city">Санкт-петербург<div class="city__arrow arrow"></div></div>
-        
         <div class="header__top-righ">
           <a class="email">zakaz@печатьнахолсте.рф</a>
           <div class="header__social social">
@@ -137,47 +136,81 @@
       </div>      
       <span class="section-ofer__text"></span>
     </section>
-
-
     <div class="carousel">
         <button class="carousel__button button-prev"></button>
         <div class="carousel__gallery">
           <ul class="carousel__images">
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic1.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic1.jpg">
             </li>
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic2.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic2.jpg">
             </li>
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic3.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic3.jpg">
             </li>
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic4.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic4.jpg">
             </li>
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic5.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic5.jpg">
             </li>
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic6.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic6.jpg">
             </li>
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic1.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic1.jpg">
             </li>
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic2.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic2.jpg">
             </li>
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic3.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic3.jpg">
             </li>
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic4.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic4.jpg">
             </li>
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic5.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic5.jpg">
             </li>
             <li class="carousel__item">
-              <img class="carousel__item" src="img/pic6.jpg">
+              <img class="carousel__item carousel__item--img" src="img/pic6.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic1.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic2.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic3.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic4.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic5.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic6.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic1.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic2.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic3.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic4.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic5.jpg">
+            </li>
+            <li class="carousel__item">
+              <img class="carousel__item carousel__item--img" src="img/pic6.jpg">
             </li>
           </ul>
         </div>
@@ -188,5 +221,8 @@
 
     
   </main>
+  <script src="js/section-order.js"></script>
+  <script src="js/carousel.js"></script>
+
 </body>
 </html>
