--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
           <div class="card-order__put put put-size">
             <span class="put__title">Размер:</span>
             <p class="put__subtitle">80x120</p>
-            <div class="put-size__arrow "></div>
+            <div class="put-size__arrow"></div>
             <ul class="put-size__list-size list-size">
-              <li class="list-size__item">80x120</li>
-              <li class="list-size__item">150x122</li>
-              <li class="list-size__item">80x120</li>
-              <li class="list-size__item">150x122</li>              
+              <li class="list-size__item">80x80</li>
+              <li class="list-size__item">80x160</li>
+              <li class="list-size__item">80x240</li>
+              <li class="list-size__item">160x200</li>              
             </ul>
             <div class="list-size__arrow arrow"></div>
           </div>
@@ -223,6 +223,7 @@
   </main>
   <script src="js/section-order.js"></script>
   <script src="js/carousel.js"></script>
+  <script src="js/header.js"></script>
 
 </body>
 </html>
