--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Graffiti</title>
-  <link rel="shortcut icon" type="image/png" href="img/icon/heart-upside-down.png"/>
+  <!-- <link rel="shortcut icon" type="image/png" href="img/icon/heart-upside-down.png"/>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/section-order.css">
   <link rel="stylesheet" href="css/section-ofer.css">
-  <link rel="stylesheet" href="css/carousel.css">
+  <link rel="stylesheet" href="css/carousel.css"> -->
+
+  <link rel="stylesheet" href="build/css/style-min.css">
 </head>
 <body>
   <header class='header'>
@@ -221,9 +223,12 @@
 
     
   </main>
-  <script src="js/section-order.js"></script>
+  <!-- <script src="js/section-order.js"></script>
   <script src="js/carousel.js"></script>
-  <script src="js/header.js"></script>
+  <script src="js/header.js"></script> -->
+  <script src="build/js/script-min.js"></script>
+
+
 
 </body>
 </html>
