--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/section-ofer.css">
   <link rel="stylesheet" href="css/carousel.css"> -->
 
-  <link rel="stylesheet" href="build/css/style-min.css">
+  <link rel="stylesheet" href="build/styles/style.min.css">
 </head>
 <body>
   <header class='header'>
@@ -226,7 +226,7 @@
   <!-- <script src="js/section-order.js"></script>
   <script src="js/carousel.js"></script>
   <script src="js/header.js"></script> -->
-  <script src="build/js/script-min.js"></script>
+  <script src="build/scripts/script.min.js"></script>
 
 
 
