--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/section-ofer.css">
   <link rel="stylesheet" href="css/carousel.css"> -->
 
-  <link rel="stylesheet" href="../build/styles/style.min.css">
+  <link rel="stylesheet" href="./build/styles/style.min.css">
 </head>
 <body>
   <header class='header'>
