--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Graffiti</title>
-  <!-- <link rel="shortcut icon" type="image/png" href="img/icon/heart-upside-down.png"/>
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="shortcut icon" type="image/png" href="img/icon/heart-upside-down.png"/>
+  <!--<link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/section-order.css">
   <link rel="stylesheet" href="css/section-ofer.css">
